--- a/styles/reset.css
+++ b/styles/reset.css
@@ -4,10 +4,6 @@
   margin: 0;
 }
 
-:root {
-  font-size: 62.5%; 
-}
-
 ul {
   list-style: none;
 }
@@ -20,11 +16,13 @@ fieldset {
   border: 0;
 }
 
-
-/* Para que los input de los formularios, cuando están en column, no ocupen 100vw
 input {
   align-self: self-start;
-} */
+}
+
+button {
+  align-self: self-start;
+}
 
   /* Para que el recuadro de textarea se ponga debajo de su título
   .comments {
