--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,8 @@ main {
 .input {
   background-color: lightgray;
   padding: 5px;
-  border-radius: 10px;
+  border-radius: 5px;
+  border: none;
 }
 
 .button {
